# Logic

./: .gitignore  Logic.cabal  after  before  cabal.config  example.unstructured  note  notes  package.yaml  sol  stack.yaml  step  test  test.json
app/: DualityExample.hs  DuplicateHyperEdge.hs  EntailmentExample.hs  EquivalenceExample.hs  GraphExample.hs  ImperativeExample.hs  ImplicationGraphExample.hs  ImplicationGraphExample2.hs  KeyExample.hs  LoopyExample.hs  Main.hs  Mult.hs  OptimizeExample.hs  ProcedureExample.hs  ReductionExample.hs  SafetyExample.hs  ShapeExample.hs  SimplifyExample.hs  TestGrammar.hs
example/: AddDigits.java  CanMeasureWater.java  Count.java  CountDigitOne.java  Mult.java  Pow.java  PowerOf2.java  Sum.java  TrailingZeroes.java
full-sequential/: core.z3  invariant.z3
java-parse/: .gitignore  .java-version  .merlin  Dockerfile  Makefile  README.md  Wunderhorn.java  _oasis  install.sh  main.sh
java-parse/examples/: Mult.java
java-parse/examples/climb-stairs/: ClimbStairs.java
java-parse/examples/simple/: EvenLoop.java
java-parse/examples/squashing/: Squash.java
java-parse/src/: main.ml
java-parse/src/java/: BuiltIn.ml  GraphDebug.ml  ImplicationGraph.ml  InstrGraph.ml  Ir.ml  ParseJava.ml  ToIr.ml
java-parse/src/prover/: GraphToCHC.ml
java-parse/src/util/: Algorithm.ml  QualifiedIdentity.ml
proof/: .Background.aux  .EvalExample.aux  .Maps.aux  .Proof.aux  Background.glob  Background.v  Background.vo  EvalExample.glob  EvalExample.v  EvalExample.vo  Makefile  Maps.glob  Maps.v  Maps.vo  Proof.glob  Proof.v  Proof.vo
src/: Formula.hs  Grammar.hs  Language.hs
src/Data/: Loc.hs
src/Data/Graph/Inductive/: Extras.hs
src/Data/Optic/Graph/: Extras.hs
src/Data/Ord/Graph/: Extras.hs
src/Data/Tree/: Extras.hs
src/Formula/: Chc.hs  Expr.hs  Form.hs  Model.hs  Parser.hs  Type.hs  Var.hs  Vocab.hs  Z3.hs
src/Grammar/: Grammar.hs  Inductive.hs  Interpolate.hs  Plot.hs  Product.hs  Simplify.hs  Solve.hs  Unwind.hs
src/Imperative/: Command.hs
src/Language/: Grammar.hs  Imp.hs  Imperative.hs  ImperativeOld.hs  Java.hs  Language.hs  Parser.hs  Structured.hs  Unstructured.hs
src/Language/Imperative/: Concurrent.hs  Equivalence.hs  Shape.hs
src/Language/Unstructured/: Grammar.hs  Java.hs  Parser.hs  Unstructured.hs
src/Logic/: Chc.hs  Entailment.hs  Formula.hs  ImplicationGraph.hs  Model.hs  Name.hs  Type.hs  Var.hs
src/Logic/Formula/: Chc.hs  Form.hs  Generalizer.hs  Loc.hs  Model.hs  Parser.hs  Tokens.hs  Type.hs  Var.hs  Vocab.hs
src/Logic/Generalizer/: Generalizer.hs  generalizer.z3
src/Logic/ImplicationGraph/: Accessors.hs  Chc.hs  Equivalence.hs  Induction.hs  Interpolate.hs  JSONParser.hs  JavaParser.hs  LTree.hs  Optimize.hs  Safety.hs  Shape.hs  Simplify.hs  Solve.hs  StackFragments.hs  Type.hs  Type2.hs  Types.hs
src/Logic/Solver/: Duality.hs  Equivalence.hs  Safety.hs  Z3.hs
src/Text/: Parsable.hs
test/Data/: LocTest.hs
