name:                Logic
version:             0.1.0.0
homepage:            https://github.com/githubuser/Logic#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall, -O2
  exposed-modules:     Logic.Formula
                     , Logic.Formula.Parser
                     , Logic.Var
                     , Logic.Type
                     , Logic.Model
                     , Logic.Chc
                     , Logic.ImplicationGraph
                     , Logic.ImplicationGraph.Induction
                     , Logic.ImplicationGraph.Equivalence
                     , Logic.ImplicationGraph.Safety
                     , Logic.ImplicationGraph.Simplify
                     , Logic.Solver.Z3
                     , Data.Optic.Graph.Extras
                     , Logic.ImplicationGraph.JSONParser
                     , Logic.ImplicationGraph.Optimize

  default-extensions:  LambdaCase
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , RankNTypes
                     , FlexibleContexts
  other-extensions:    TemplateHaskell

  build-depends:       base             >= 4.8
                     , containers       >= 0.5
                     , tardis
                     , graphviz
                     , turtle
                     , fixed-vector
                     , lens             >= 4.15
                     , mtl              >= 2.2
                     , monad-loops
                     , extra
                     , random-fu
                     , random-extras
                     , parsec           >= 3.1
                     , prettyprinter
                     , template-haskell >= 2.11
                     , syb
                     , text             >= 1.2
                     , transformers     >= 0.5
                     , z3               >= 4.1
                     , these
                     , optic-graph
                     , split
                     , aeson
                     , unordered-containers
                     , vector
                     , bytestring
  default-language:    Haskell2010

executable DualityExample
  hs-source-dirs:      app
  main-is:             DualityExample.hs
  ghc-options:
  build-depends:       base
                     , text             >= 1.2
                     , prettyprinter
                     , mtl
                     , containers
                     , optic-graph
                     , Logic
                     , bytestring
  default-language:    Haskell2010

executable ImplicationGraphExample
  hs-source-dirs:      app
  main-is:             ImplicationGraphExample.hs
  ghc-options:
  build-depends:       base
                     , text             >= 1.2
                     , mtl
                     , prettyprinter
                     , containers
                     , Logic
                     , optic-graph
                     , bytestring
  default-language:    Haskell2010

executable OptimizeExample
  hs-source-dirs:      app
  main-is:             OptimizeExample.hs
  ghc-options:
  build-depends:       base
                     , text             >= 1.2
                     , mtl
                     , prettyprinter
                     , containers
                     , Logic
                     , optic-graph
                     , bytestring
                     , lens             >= 4.15
  default-language:    Haskell2010

executable ImperativeExample
  hs-source-dirs:      app
  main-is:             EquivalenceExample.hs
  ghc-options:
  build-depends:       base
                     , text             >= 1.2
                     , mtl
                     , prettyprinter
                     , containers
                     , Logic
                     , optic-graph
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Logic
