name:                Logic
version:             0.1.0.0
homepage:            https://github.com/githubuser/Logic#readme
license:             BSD3
license-file:        LICENSE
author:              David Heath
maintainer:          heath.davidanthony@gmail.com
copyright:           2017 David Heath
category:            Compilers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:     Logic.Formula
                     , Logic.ImplicationGraph
                     , Logic.Solver.Equivalence
                     , Logic.Solver.Safety
                     , Logic.Solver.Z3
                     , Language.Structured
                     , Language.Unstructured
                     , Data.Optic.Graph.Extras
                     , Data.Loc
  other-modules:       Logic.Formula.Var
                     , Logic.Formula.Type
                     , Logic.Formula.Model
                     , Logic.Formula.Chc
                     , Logic.Formula.Parser
                     , Logic.Formula.Form
                     , Logic.ImplicationGraph.Chc
                     , Logic.ImplicationGraph.Induction
                     , Logic.ImplicationGraph.Simplify
                     , Logic.ImplicationGraph.LTree
                     , Logic.ImplicationGraph.Types
                     , Logic.ImplicationGraph.Accessors

  default-extensions:  LambdaCase
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , RankNTypes
                     , FlexibleContexts
                     , FlexibleInstances
                     , TemplateHaskell
  other-extensions:

  build-depends:       base             >= 4.8
                     , containers       >= 0.5
                     , turtle
                     , lens             >= 4.15
                     , mtl              >= 2.2
                     , monad-loops
                     , pointed
                     , extra
                     , parsec           >= 3.1
                     , prettyprinter
                     , template-haskell >= 2.11
                     , syb
                     , text             >= 1.2
                     , transformers     >= 0.5
                     , z3               >= 4.1
                     , optic-graph
                     , split
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable Examples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
  other-modules:       KeyExample
                     , EquivalenceExample
                     , SafetyExample
  build-depends:       base
                     , text             >= 1.2
                     , lens
                     , mtl
                     , prettyprinter
                     , containers
                     , Logic
                     , optic-graph
                     , bytestring
  default-language:    Haskell2010

test-suite logic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Data/LocTest.hs
  build-depends:       base
                     , Logic
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Logic
