name:                Logic
version:             0.1.0.0
homepage:            https://github.com/githubuser/Logic#readme
license:             BSD3
license-file:        LICENSE
author:              David Heath
maintainer:          heath.davidanthony@gmail.com
copyright:           2017 David Heath
category:            Compilers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:     Formula
                     , Formula.Z3
                     , Grammar
                     , Language
  other-modules:       Formula.Var
                     , Formula.Type
                     , Formula.Model
                     , Formula.Chc
                     , Formula.Parser
                     , Formula.Form
                     , Grammar.Grammar
                     , Grammar.Product
                     , Grammar.Simplify
                     , Grammar.Solve
                     , Grammar.Unwind
                     , Language.Grammar
                     , Language.Java
                     , Language.Language
                     , Language.Parser

  default-extensions:  LambdaCase
                     , MultiWayIf
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , RankNTypes
                     , FlexibleContexts
                     , FlexibleInstances
                     , TemplateHaskell
  other-extensions:

  build-depends:       base             >= 4.8
                     , containers       >= 0.5
                     , turtle
                     , lens             >= 4.15
                     , mtl              >= 2.2
                     , monad-loops
                     , extra
                     , parsec           >= 3.1
                     , prettyprinter
                     , template-haskell >= 2.11
                     , syb
                     , text             >= 1.2
                     , transformers     >= 0.5
                     , z3               >= 4.1
                     , split
                     , bytestring
  default-language:    Haskell2010

executable Examples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
  build-depends:       base
                     , text             >= 1.2
                     , lens
                     , mtl
                     , prettyprinter
                     , containers
                     , Logic
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Logic
